--- a/_configs/environment_CPU.yaml
+++ b/_configs/environment_CPU.yaml
@@ -5,7 +5,7 @@
 
 # To create the environment, run: (this can take some time to run)
 # 
-#     conda env create -f _configs/environment_CPU.yml
+#     conda env create -f _configs/environment_CPU.yaml
 #
 # After creating the environment, activate it using:
 #
